--- a/app/src/main/res/layout/fragment_pesanan.xml
+++ b/app/src/main/res/layout/fragment_pesanan.xml
@@ -212,7 +212,7 @@
                                                 android:id="@+id/tv_nama_mitra"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
-                                                android:fontFamily="@font/roboto"
+                                                android:fontFamily="@font/roboto_medium"
                                                 android:maxLength="30"
                                                 android:text="PT Sukses Jaya"
                                                 android:textColor="@color/font_default"
@@ -631,7 +631,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/roboto_medium"
                         android:text="Tanggal Pemesanan"
                         android:textColor="@color/font_default"
                         android:textSize="15sp"
@@ -669,7 +669,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/roboto_medium"
                         android:text="Waktu Pemesanan"
                         android:textColor="@color/font_default"
                         android:textSize="15sp"
