--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -77,14 +77,16 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
         <TextView
+            android:id="@+id/tv_resend_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_bold"
             android:text="@string/kirim_ulang"
-            android:textColor="#36B5FE"
+            android:textColor="@color/quantum_grey"
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_countdown_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
