--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -62,10 +62,8 @@
             android:text="@string/pesan_sekarang"
             android:textColor="@color/font_default"
             android:textSize="16sp"
-            android:onClick="onRadioButtonClicked"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/rb_atur_jadwal"
@@ -76,7 +74,6 @@
             android:fontFamily="@font/roboto_medium"
             android:paddingStart="8dp"
             android:text="@string/atur_jadwal"
-            android:onClick="onRadioButtonClicked"
             android:textColor="@color/font_default"
             android:textSize="16sp" />
 
@@ -391,7 +388,7 @@
     </RadioGroup>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_simpan"
+        android:id="@+id/btn_order"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         style="@style/Responsive16dp"
