--- a/app/src/main/res/layout/item_rv_ads_search.xml
+++ b/app/src/main/res/layout/item_rv_ads_search.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="325dp"
+    android:layout_height="160dp"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="2dp"
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/item_rv_img_ads"
-        android:layout_width="325dp"
-        android:layout_height="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
