--- a/app/src/main/res/layout/item_rv_shop_lainnya.xml
+++ b/app/src/main/res/layout/item_rv_shop_lainnya.xml
@@ -9,7 +9,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="wrap_content"
+        android:layout_width="132dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="4dp"
         android:layout_marginVertical="8dp"
@@ -21,13 +21,13 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingBottom="8dp">
 
             <LinearLayout
                 android:id="@+id/linearLayout27"
                 android:layout_width="0dp"
-                android:layout_height="132dp"
+                android:layout_height="128dp"
                 android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
                 android:layout_marginTop="8dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/roboto_bold"
-                android:maxLength="25"
+                android:maxLength="20"
                 android:maxLines="1"
                 android:paddingEnd="2dp"
                 android:textColor="@color/font_default"
@@ -99,7 +99,7 @@
                 app:layout_constraintTop_toTopOf="@+id/tv_nama_mitra" />
 
             <TextView
-                android:id="@+id/tv_harga_sesudah_diskon"
+                android:id="@+id/tv_price"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -111,22 +111,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_kategori_mitra"
                 tools:text="Rp90.000,00" />
-
-            <TextView
-                android:id="@+id/tv_harga_sebelum_diskon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/roboto_bold"
-                android:maxLines="1"
-                android:layout_marginEnd="8dp"
-                android:textColor="@color/fontDiskon"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_harga_sesudah_diskon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/tv_harga_sesudah_diskon"
-                app:layout_constraintTop_toTopOf="@+id/tv_harga_sesudah_diskon"
-                tools:text="Rp100.000,00" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
